--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/displayName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -38,25 +38,24 @@
                     android:textStyle="bold"
                     />
 
-                <EditText
-                    android:id="@+id/searchUser"
-                    android:layout_width="385dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/bg_input"
-                    android:drawableStart="@drawable/person_search"
-                    android:drawablePadding="5dp"
-                    android:layout_margin="15dp"
-                    android:hint="Search User..."
-                    android:paddingStart="10dp"
-                    android:textColorHint="@color/colorTextPrimary"
-                    />
+<!--                <EditText-->
+<!--                    android:id="@+id/searchUser"-->
+<!--                    android:layout_width="385dp"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:background="@drawable/bg_input"-->
+<!--                    android:drawableStart="@drawable/person_search"-->
+<!--                    android:drawablePadding="5dp"-->
+<!--                    android:layout_margin="15dp"-->
+<!--                    android:hint="Search User..."-->
+<!--                    android:paddingStart="10dp"-->
+<!--                    android:textColorHint="@color/colorTextPrimary"-->
+<!--                    />-->
 
                         <TextView
                             android:id="@+id/textView7"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
                             android:textColor="@color/colorTextPrimary"
                             android:layout_margin="15dp"
                             android:text="Useful Technologies" />
@@ -105,6 +104,7 @@
                         android:orientation="vertical">
 
                         <RelativeLayout
+                            android:id="@+id/searchUser"
                             android:layout_width="90dp"
                             android:layout_height="90dp"
                             android:background="@drawable/card_2">
@@ -112,7 +112,7 @@
                             <ImageView
                                 android:layout_width="60dp"
                                 android:layout_height="60dp"
-                                android:background="@drawable/ic_track"
+                                android:background="@drawable/ic_search"
                                 android:layout_centerInParent="true"/>
                         </RelativeLayout>
 
@@ -120,7 +120,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
-                            android:text="Track User"
+                            android:text="Search Car"
                             android:textColor="@color/colorTextPrimary"
                             android:gravity="center_horizontal"/>
                     </LinearLayout>
@@ -166,7 +166,7 @@
                             <ImageView
                                 android:layout_width="60dp"
                                 android:layout_height="60dp"
-                                android:background="@drawable/ic_profile"
+                                android:background="@drawable/ic_track"
                                 android:layout_centerInParent="true"/>
                         </RelativeLayout>
 
@@ -174,7 +174,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
-                            android:text="View Profile"
+                            android:text="Track User"
                             android:textColor="@color/colorTextPrimary"
                             android:gravity="center_horizontal"/>
                     </LinearLayout>
