--- a/app/src/main/res/layout/activity_police_profile.xml
+++ b/app/src/main/res/layout/activity_police_profile.xml
@@ -35,10 +35,10 @@
                 tools:ignore="MissingConstraints" />
 
         <Button
-            android:id="@+id/doct_ChangeImage"
+            android:id="@+id/police_ChangeImage"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:text="Change Image"
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="5dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         tools:ignore="MissingConstraints">
 
@@ -66,7 +66,7 @@
                 android:layout_width="143dp"
                 android:layout_height="38dp"
                 android:textColor="@color/colorTextPrimary"
-                android:text="First Name:"
+                android:text="Name:"
                 android:textSize="18sp" />
 
         </LinearLayout>
@@ -92,6 +92,53 @@
 
     </LinearLayout>
 
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:padding="5dp"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            tools:ignore="MissingConstraints">-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:padding="5dp"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/police_Surname"-->
+<!--                    android:layout_width="143dp"-->
+<!--                    android:layout_height="38dp"-->
+<!--                    android:textColor="@color/colorTextPrimary"-->
+<!--                    android:text="Surname:"-->
+<!--                    android:textSize="18sp" />-->
+
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:padding="1dp"-->
+<!--                android:background="@drawable/bg_input"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <EditText-->
+<!--                    android:id="@+id/police_SurnameEdit"-->
+<!--                    android:layout_width="240dp"-->
+<!--                    android:layout_height="50sp"-->
+<!--                    android:inputType="textPersonName"-->
+<!--                    android:textColor="@color/colorTextPrimary"-->
+<!--                    android:text="Surname" />-->
+
+<!--            </LinearLayout>-->
+
+
+<!--        </LinearLayout>-->
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -109,7 +156,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/police_Surname"
+                    android:id="@+id/police_Email"
                     android:layout_width="143dp"
                     android:layout_height="38dp"
                     android:textColor="@color/colorTextPrimary"
@@ -127,7 +174,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/police_LastNameEdit"
+                    android:id="@+id/police_SurnameEdit"
                     android:layout_width="240dp"
                     android:layout_height="50sp"
                     android:inputType="textPersonName"
@@ -234,13 +281,13 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/doctupdateBtn"
+            android:id="@+id/policeUpdateBtn"
             android:layout_width="156dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="8dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_gravity="right"
             android:text="Update" />
