--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="colorOnboardingIndicatorInactive">#72BCF7</color>
 
     <color name="black">#000000</color>
+    <color name="green">#5FDD64</color>
+
 
     //body and background
     <color name="banner_background">#F6CA34</color>
